src/objects/Change_Request__c.object
<CustomObject>
    <description>BME - A Change Request represents an additional segment of work that has been presented during the project in which new Requirement(s) can be associated to it.</description>
    <fields>
        <fullName>Age__c</fullName>
        <description>Calculates the age of the Change Request in days</description>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to assign a developer to an approved CR</description>
        <label>Assigned Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biz_Process_Process_Hours__c</fullName>
        <description>This field captures the additional LOE necessary for business process work.</description>
        <label>Biz Process Design Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bug_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bug Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bug_description__c</fullName>
        <inlineHelpText>Please provide the description of the bug,</inlineHelpText>
        <label>Bug description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Build_Status__c</fullName>
        <label>Build Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>This field is used to describe the type of change</description>
        <label>Change Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption and Org Readiness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Configuration_Hours__c</fullName>
        <description>This field captures the additional LOE necessary for configuration.</description>
        <label>Configuration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consensus_Meeting_Comments__c</fullName>
        <label>Consensus Meeting Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Reviewed_in_Consensus_Meeting__c</fullName>
        <label>Date Reviewed in Consensus Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_Reassessment__c</fullName>
        <label>Date for Reassessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deploying_from_environment__c</fullName>
        <inlineHelpText>Please select the environment the code and configuration will be moved from.</inlineHelpText>
        <label>Deploying from environment</label>
        <picklist>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test (QA)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deploying_to_environment__c</fullName>
        <inlineHelpText>Please select the environment the code and configuration will be moved to.</inlineHelpText>
        <label>Deploying to environment</label>
        <picklist>
            <picklistValues>
                <fullName>Test (QA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Instructions__c</fullName>
        <inlineHelpText>Please provide instructions like disabling workflow rules, email alerts, etc.</inlineHelpText>
        <label>Deployment Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Code change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration and code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiles and permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Hours__c</fullName>
        <description>This field captures the additional LOE necessary for development.</description>
        <label>Development Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Progress__c</fullName>
        <description>This field is used to track the development progress of an approved change request</description>
        <label>Development Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_End_Time__c</fullName>
        <inlineHelpText>Please provide estimated end time of the deployment.</inlineHelpText>
        <label>Estimated End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Approver__c</fullName>
        <label>Final Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fix_Type__c</fullName>
        <label>Fix Type</label>
        <picklist>
            <picklistValues>
                <fullName>Code change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration and code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiles and permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_for_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag for Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Date__c</fullName>
        <inlineHelpText>Please provide the implementation fix date</inlineHelpText>
        <label>Fix Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Notes__c</fullName>
        <description>This field is used to track dev/implementation notes for an approved change request</description>
        <label>Implementation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Completion_Date__c</fullName>
        <description>Date field to track the planned completion date of the Requirement/Scope Change</description>
        <label>Planned Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_fix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Production fix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Start_Time__c</fullName>
        <inlineHelpText>Please provide the proposed start time for the deployment</inlineHelpText>
        <label>Proposed Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirements_Hours__c</fullName>
        <description>This field captures the additional LOE necessary for information gathering.</description>
        <label>Requirements Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollback_plan__c</fullName>
        <inlineHelpText>Please provide detailed rollback plan.</inlineHelpText>
        <label>Rollback plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>This field is dependent on Change Category</description>
        <label>Sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Design_Hours__c</fullName>
        <description>This field captures the additional LOE necessary for technical design.</description>
        <label>Tech Design Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Level_of_Effort__c</fullName>
        <description>This field sums up all LOE into the total number of hours for this change request.</description>
        <formula>Requirements_Hours__c + Biz_Process_Process_Hours__c + Tech_Design_Hours__c + Configuration_Hours__c + Development_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Level of Effort</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Package</label>
        <referenceTo>Work_Package__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>AllChangeRequests</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Change Requests</label>
    </listViews>
    <listViews>
        <fullName>Change_Requests_Approved</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Change Requests Approved</label>
    </listViews>
    <listViews>
        <fullName>Change_Requests_Denied</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <label>Change Requests Denied</label>
    </listViews>
    <listViews>
        <fullName>My_Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Change Requests</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Change Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <recordTypes>
        <fullName>Requirement_change</fullName>
        <active>true</active>
        <description>Use this to submit a requirement change</description>
        <label>Requirement change</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>